<resources>
    <string name="app_name">巡检拍照</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">信号巡检作业拍照终端</string>
    <string name="depot_title">请填写以下信息</string>
    <string name="depot_new">添加</string>
    <string name="depot_cancle">取消</string>
    <string name="depot_add">添加</string>
    <string name="depot_name">段名</string>
    <string name="depot_name_hint">请输入段名</string>
    <string name="dc_num">道岔数量</string>
    <string name="dc_num_hint">请输入道岔数量</string>
    <string name="dc_item_max">转折机最大数量</string>
    <string name="dc_item_max_hint">请输入转折机最大数量</string>
    <string name="dc_num_title">道岔总数: </string>
    <string name="dc_set_position">定位</string>
    <string name="dc_back_position">返位</string>
    <string name="dc_out_position">状态</string>
    <string name="dc_take_photo">拍照</string>
    <string name="dc_preview">预览</string>
    <string name="dc_name_suffix">道岔</string>
    <string name="dc_id_postfix">号</string>
    <string name="dc_name_postfix">机</string>
    <string name="dc_item_name_postfix">尖</string>
    <string name="dc_other_photos">其他照片</string>
    <string name="dc_id">道岔号</string>
    <string name="dc_position">位置</string>
    <string name="dc_misc">Misc</string>
    <string name="other_photo">照片名称</string>
    <string name="other_photo_msg">请输入照片名称</string>
    <string name="dc_item_name">道岔号</string>
    <string name="dc_item_name_msg">请输入道岔号</string>
    <string name="dc_item_turnout_name">转折机数</string>
    <string name="dc_item_turnout_name_msg">请输入转折机数量</string>
    <string name="dc_item_turnout_add_item">转折机号</string>
    <string name="dc_item_turnout_add_item_msg">请输入转折机号(如：尖1， 心1)</string>
    <string name="dc_item_turnout_modify_item_old">旧转折机号</string>
    <string name="dc_item_turnout_modify_item_new">新转折机号</string>
    <string name="dc_item_turnout_modify_item_msg">请输入新的转折机号</string>
    <string name="dc_item_null">请输入道岔号</string>
    <string name="dc_turnout_item_null">请输入转折机数量</string>
    <string name="notification_msg_title">温馨提示</string>
    <string name="msg_ok">确定</string>
    <string name="action_search_result_title">搜索结果</string>
    <string name="msg_photo_null">请输入照片名称</string>
    <string name="msg_depot_null">请输入站名</string>
    <string name="msg_dc_null">请输入道岔数量</string>
    <string name="msg_item_null">请输入最大转折机数量</string>
    <string name="msg_depot_again">该站已存在，请确认后再试</string>
    <string name="msg_dc_again">该道岔已存在，请确认后再试</string>
    <string name="msg_dc_item">该转折机已存在，请确认后再试</string>
    <string name="menu_browse">浏览</string>
    <string name="menu_search">查找</string>
    <string name="menu_add">添加</string>
    <string name="menu_import">导入配置</string>
    <string name="menu_export">导出配置</string>
    <string name="save_finished">数据采集已完成</string>
    <string name="show_thumb_null">该设备暂时未拍照，无预览图</string>
    <string name="del_depot_msg">您确认删除该站数据吗吗？</string>

    <string name="title_activity_splash">SplashActivity</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="search_null">该搜索结果不存在，请重试</string>
    <string name="history_button">清空搜索历史</string>
    <string name="history_title">历史记录</string>
    <string name="history_msg">历史记录已清空</string>

    <string name="select_all">全选</string>
    <string name="select_reverse">反选</string>
    <string name="select_del">删除</string>
    <string name="cancal_select">取消</string>

    <string name="dc_item_add">添加</string>
    <string name="dc_item_del">删除</string>
    <string name="dc_item_modify">修改</string>
    <string name="dc_item_add_msg">添加转折机成功</string>
    <string name="dc_item_del_msg">删除转折机成功</string>
    <string name="dc_item_del_msg_ok">确认要删除该转折机吗？</string>
    <string name="dc_item_modify_msg">修改转折机名称成功</string>

    <string name="browse_photo_title">照片浏览</string>
    <string name="photo_null">您还未拍照，无法进行照片浏览</string>
    <string name="select_file_fotmat_err">文件格式不正确，请重试！</string>
    <string name="select_file_depot_err">选择站点错误，请重试！</string>
    <string name="export_cfg_success">配置文件导出成功</string>
    <string name="import_cfg_success">配置文件导入成功</string>
    <string name="install_file_browser">请安装文件管理器</string>

    <string name="save_photo">保存</string>
    <string name="multiple_select_title">请选择</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
