<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
	<item android:id="@+id/action_add"
        android:title="@string/menu_add"
        android:icon="@drawable/ic_action_add"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="200"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_browse"
        android:title="@string/menu_browse"
        android:icon="@drawable/ic_action_browse"
        android:orderInCategory="300"
        app:showAsAction="never" />
    <item android:id="@+id/action_import"
        android:title="@string/menu_import"
        android:icon="@drawable/ic_action_browse"
        android:orderInCategory="300"
        app:showAsAction="never" />
    <item android:id="@+id/action_export"
        android:title="@string/menu_export"
        android:icon="@drawable/ic_action_browse"
        android:orderInCategory="300"
        app:showAsAction="never" />
</menu>