<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/dialog_depot_top_margin"
    android:layout_marginBottom="@dimen/dialog_depot_bottom_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginTop="@dimen/dialog_depot_top_margin"
            android:layout_marginBottom="@dimen/dialog_depot_bottom_margin"
            android:layout_marginLeft="@dimen/dialog_depot_left_margin"
            android:text="@string/dc_item_name"
            android:textSize="@dimen/dc_item_turnout_size"/>

        <EditText
            android:id="@+id/et_dc_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginTop="@dimen/dialog_depot_top_margin"
            android:layout_marginBottom="@dimen/dialog_depot_bottom_margin"
            android:layout_marginRight="@dimen/dialog_depot_right_margin"
            android:inputType="text"
            android:maxLines="1"
            android:maxLength="16"
            android:hint="@string/dc_item_name_msg"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginTop="@dimen/dialog_depot_top_margin"
            android:layout_marginBottom="@dimen/dialog_depot_bottom_margin"
            android:layout_marginLeft="@dimen/dialog_depot_left_margin"
            android:text="@string/dc_item_turnout_name"
            android:textSize="@dimen/dc_item_turnout_size"/>

        <EditText
            android:id="@+id/et_dc_turnout_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:inputType="number"
            android:layout_marginTop="@dimen/dialog_depot_top_margin"
            android:layout_marginBottom="@dimen/dialog_depot_bottom_margin"
            android:layout_marginRight="@dimen/dialog_depot_right_margin"
            android:maxLines="1"
            android:maxLength="16"
            android:hint="@string/dc_item_turnout_name_msg"/>
    </LinearLayout>


</LinearLayout>