<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/dialog_depot_top_margin"
    android:layout_marginBottom="@dimen/dialog_depot_bottom_margin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_depot_top_margin"
            android:layout_marginBottom="@dimen/dialog_depot_bottom_margin"
            android:layout_marginLeft="@dimen/dialog_depot_left_margin"
            android:text="@string/dc_item_turnout_modify_item_old"
            android:textSize="@dimen/dc_title_size"/>
        <TextView
            android:id="@+id/tv_dc_item_mod_old"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_depot_top_margin"
            android:layout_marginBottom="@dimen/dialog_depot_bottom_margin"
            android:layout_marginLeft="@dimen/dialog_depot_left_margin"
            android:textSize="@dimen/dc_title_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_depot_top_margin"
            android:layout_marginBottom="@dimen/dialog_depot_bottom_margin"
            android:layout_marginLeft="@dimen/dialog_depot_left_margin"
            android:text="@string/dc_item_turnout_modify_item_new"
            android:textSize="@dimen/dc_title_size"/>
        <EditText
            android:id="@+id/et_dc_item_mod_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_depot_top_margin"
            android:layout_marginBottom="@dimen/dialog_depot_bottom_margin"
            android:layout_marginLeft="@dimen/dialog_depot_left_margin"
            android:layout_marginRight="@dimen/dialog_depot_right_margin"
            android:maxLines="1"
            android:maxLength="16"
            android:hint="@string/dc_item_turnout_modify_item_msg"/>
    </LinearLayout>

</LinearLayout>