<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.sunland.signalinspect.ActionSearchActivity">

    <include layout="@layout/action_search_bar_main"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ListView
            android:id="@+id/listview_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible">
        </ListView>
        <LinearLayout
            android:id="@+id/ll_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dialog_depot_left_margin"
                android:layout_marginRight="@dimen/dialog_depot_right_margin">
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dialog_depot_right_margin"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:clickable="false"
                    android:text="@string/history_title"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/dialog_depot_left_margin"
                    android:text="@string/history_button"
                    android:onClick="clearHistory"/>
            </LinearLayout>
            <TextView
                android:id="@+id/history_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dialog_depot_top_margin"
                android:gravity="center"
                android:visibility="gone"
                android:text="@string/history_msg"/>
            <ListView
                android:id="@+id/listview_search_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
            </ListView>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>
